tests/gcc-torture/breakdown/success/921019-1.c
#include "cerberus.h"
void *foo[]={(void *)&("X"[0])};

int 
main (void)
{
  if (((char*)foo[0])[0] != 'X')
    abort ();
  exit (0);
}
